[tool.poetry]
name = "ts_predict"
version = "0.1.0"
description = ""
authors = ["Yannick Aaron Lehr <yannick.lehr@ioki.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
toml = "^0.10.2"
darts = "^0.23.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
black = "^22.10.0"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
ipykernel = "^6.16.1"
ipynbname = "^2021.3.2"
notebook = "^6.5.1"
toml = "^0.10.2"
nbqa = "^1.5.3"
pyupgrade = "^3.1.0"
mypy = "^0.982"
ipywidgets="7.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 132
target-version = ['py37', 'py38']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.tox
  | \.venv
  | build
  | dist
  | docs
  | notes
)/
'''

[tool.isort]
profile = "black"
line_length = 100
